* Feb 6 2001 hship

Don't create new page recorder instances until actually needed.
Actually invoke the ILifeCycle finishLoad() method.
Allow informal parameters for the validating text field components (but apply them
to the underlying TextField).

* Jan 26 2001 hship

Remove IRequestCycle from the parameter list for RequestCycleException and all sub-exceptions.
Vastly improve the Script component and related classes.

* Jan 26 2001 hship

Revisit links and event handlers ... again!  ServiceLinks now support
a well-defined set of events, but can handle any number of JavaScript
functions.
Add some more documentation to the DTDs.
Rename IBinding.getValue() to getObject().
Rename IBinding.setValue() to setObject().
Add IBinding.getObject(String,Class).

* Jan 25 2001 hship

Get log4j javadoc from jakarta.apache.org.

* Jan 25 2001 hship

Pool PageLoaders.
Fix some latent threading bugs in PropertyAccessor and PageSource.
Add a sanity check to AbstractPage.attach().
Change AbstractApplication to log uncaught exceptions (in addition to raising the exception page).


* Jan 19 2001 hship

Change some method signatures in IEngine and AbstractEngine such that engine has
access to the IRequestCycle when it creates a visit object.

* Jan 18 2001 hship

Make the session ID the NDC (nested diagnostic context, used with log4j).

* Jan 17 2001 hship

Tiny efficiency improvement in Enum serialization.

* Jan 16 2001 hship

Rename IResponseWriter.beginOrphan() to beginEmpty().
Add support for setting scheme and/or port in AbstractServiceLink.

* Jan 16 2001 hship

Add ICallback and some implementations.
Change the interface for IDirectListener slightly.

* Jan 10 2001 hship

Change names of Pool methods slightly.
Add a bunch of log4j logging to Script, ScriptGenerator, RequestCycle, etc.
Use better names for some IRequestCycle attributes (used to track active components).

* Jan 10 2001 hship

Update for log4j 1.0.

* Jan 9 2001 hship
